fixed loch ness spacing

--- a/style.css
+++ b/style.css
@@ -30,11 +30,16 @@ img {
     gap: 50px;
     width: 80%;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 .info {
     font-size: 1.25rem;
+}
+
+.loch-ness-info {
+    font-size: 1.25rem;
+    margin-top: -25px;
 }
 
 .three-column {
